--- a/media/css/main.css
+++ b/media/css/main.css
@@ -477,14 +477,16 @@ span.unread-message-count {
 }
 
 header.global #support-search {
+    float: right;
     padding: 0;
     position: absolute;
     right: 0;
     top: 63px;
-    width: 424px;
+    width: auto;
 }
 
 .html-rtl header.global #support-search {
+    float: left;
     left: 0;
     right: auto;
 }
@@ -738,6 +740,7 @@ div.support-search input.btn-important {
 }
 
 .html-rtl div.support-search input.btn-important {
+    float: right;
     margin: 0 6px 0 0;
 }
 
